Add layout files for the activity_main and its 3 fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">AstroApp</string>
+    <string name="photo_of_the_day_content_description">Photo of the day</string>
+    <string name="diameter_label">Diameter: </string>
+    <string name="approach_date_label">Approach date: </string>
+    <string name="velocity_label">Velocity: </string>
+    <string name="read_more_button">Read more</string>
+    <string name="asteroid_hazardous_button">Asteroid hazardous indication</string>
+
 </resources>
