Add layout files for the ObservatoryActivity - activity and fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="velocity_label">Velocity: </string>
     <string name="read_more_button">Read more</string>
     <string name="asteroid_hazardous_button">Asteroid hazardous indication</string>
-
+    <string name="observatory_content_description">Observatory photo</string>
+    <string name="observatory_visit_homepage_button">Visit homepage</string>
 </resources>
