--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="observatory_visit_homepage_button">Visit homepage</string>
     <string name="widget_image_content_description">Photo of the day image</string>
     <string name="widget_photo_of_the_day">Photo of the day</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
