--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,19 @@
     <string name="widget_photo_of_the_day">Photo of the day</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="navigation_title_photo">Photo of the day</string>
+    <string name="navigation_title_asteroid">Asteroids</string>
+    <string name="navigation_title_observatory">Observatories</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">AstroApp</string>
+    <string name="nav_header_subtitle">Discover space</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_photo">Photo of the day</string>
+    <string name="menu_asteroids">Asteroids</string>
+    <string name="menu_observatories">Observatories</string>
+    <string name="menu_share">Share</string>
 </resources>
