--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="nav_header_subtitle">Discover space</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="no_photo_found">No photo found</string>
 
     <string name="menu_photo">Photo of the day</string>
     <string name="menu_asteroids">Asteroids</string>
