--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="menu_observatories">Observatories</string>
     <string name="menu_share">Share</string>
     <string name="no_asteroids_found">No asteroids found</string>
+    <string name="play_video_button">Play video</string>
 </resources>
