--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="play_video_button">Play video</string>
     <string name="observatory_open">Open now</string>
     <string name="observatory_closed">Closed now</string>
+    <string name="no_observatories_found">No observatories found</string>
 </resources>
