--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="observatory_open">Open now</string>
     <string name="observatory_closed">Closed now</string>
     <string name="no_observatories_found">No observatories found</string>
+    <string name="observatory_details_not_found">Observatory details not found</string>
 </resources>
