--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="observatory_closed">Closed now</string>
     <string name="no_observatories_found">No observatories found</string>
     <string name="observatory_details_not_found">Observatory details not found</string>
+    <string name="asteroid_image_content_description">Asteroid image</string>
+    <string name="observatory_list_item_button_content_description">See observatory details</string>
 </resources>
