--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="read_more_about_content_description">Read more about</string>
     <string name="marker_of_the_observatory_content_description">Location of the observatory</string>
     <string name="snackbar_offline_mode">You are currently offline. Displaying local data</string>
+    <string name="location_access_not_granted_toast">Location access not granted. Please allow location access</string>
 </resources>
