Code cleanup of the .xml files

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -1,35 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AstroApp</string>
-    <string name="action_settings">Postavke</string>
     <string name="approach_date_label">Datum približavanja:</string>
-    <string name="asteroid_hazardous_button">Pokazatelj opasnosti asteroida</string>
+    <string name="asteroid_hazardous_image">Pokazatelj opasnosti asteroida</string>
     <string name="asteroid_image_content_description">Slika asteroida</string>
-    <string name="asteroid_is_hazardous">Asteroid je opasan</string>
-    <string name="asteroid_not_hazardous">Asteroid nije opasan</string>
-    <string name="close">Zatvori</string>
+    <string name="asteroid_is_hazardous_content_descriptions">Asteroid je opasan</string>
+    <string name="asteroid_not_hazardous_content_description">Asteroid nije opasan</string>
     <string name="diameter_label">Promjer:</string>
     <string name="location_access_not_granted_toast">Pristup lokaciji nije dopušten. Dopustite pristup lokaciji</string>
     <string name="marker_of_the_observatory_content_description">Lokacija zvjezdarnice</string>
     <string name="menu_asteroids">Asteroidi</string>
     <string name="menu_observatories">Zvjezdarnice</string>
     <string name="menu_photo">Slika dana</string>
-    <string name="menu_share">Podijeli</string>
     <string name="name_label">Ime asteroida:</string>
     <string name="nav_header_subtitle">Otkrij svemir</string>
-    <string name="navigation_title_asteroid">Asteroidi</string>
-    <string name="navigation_title_observatory">Zvjezdarnice</string>
-    <string name="navigation_title_photo">Slika dana</string>
     <string name="no_asteroids_found">Nema pronađenih asteroida</string>
     <string name="no_observatories_found">Nema pronađenih zvjezdarnica</string>
     <string name="no_photo_found">Nema pronađenih slika</string>
-    <string name="observatory_closed">Trenutno zatvoreno</string>
-    <string name="observatory_content_description">Slika zvjezdarnice</string>
     <string name="observatory_details_not_found">Nema pronađenih detalja o zvjezdarnici</string>
     <string name="observatory_list_item_button_content_description">Vidi detalje zvjezdarnice</string>
     <string name="observatory_open">Trenutno otvoreno</string>
     <string name="observatory_visit_homepage_button">Posjeti web stranicu</string>
-    <string name="open">Otvori</string>
     <string name="photo_of_content_description">Slika</string>
     <string name="photo_of_the_day_content_description">Slika dana</string>
     <string name="read_more_about_content_description">Pročitaj više o</string>
