--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="observatory_open">Open now</string>
 
     <!-- ObservatoryFragment strings -->
+    <string name="observatory_fragment_name" translatable="false">ObservatoryFragment</string>
     <string name="location_access_not_granted_toast">Location access not granted. Please allow location access</string>
     <string name="observatory_details_not_found">Observatory details not found</string>
     <string name="observatory_visit_homepage_button">Visit homepage</string>
