--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="nav_header_title" translatable="false">AstroApp</string>
     <string name="nav_header_subtitle">Discover space</string>
+    <string name="nav_header_nasa">Data provided by NASA</string>
     <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="menu_photo">Photo of the day</string>
     <string name="menu_asteroids">Asteroids</string>
