Add a refresh button to the menu, that refreshes the current fragment

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -31,4 +31,5 @@
     <string name="widget_image_content_description">Slika dana</string>
     <string name="widget_photo_of_the_day">Slika dana</string>
     <string name="nav_header_nasa">Podaci preuzeti s NASA-e</string>
+    <string name="menu_refresh">Osvježi</string>
 </resources>
