Add a FloatingActionButton to share the photo or video of the day

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -32,4 +32,6 @@
     <string name="widget_photo_of_the_day">Slika dana</string>
     <string name="nav_header_nasa">Podaci preuzeti s NASA-e</string>
     <string name="menu_refresh">Osvježi</string>
+    <string name="share_photo">Podijeli sliku</string>
+    <string name="share_video">Podijeli videozapis</string>
 </resources>
