Add content description for the share button, and update the content descriptions of the NavigationDrawer labels

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -32,6 +32,7 @@
     <string name="widget_photo_of_the_day">Slika dana</string>
     <string name="nav_header_nasa">Podaci preuzeti s NASA-e</string>
     <string name="menu_refresh">Osvježi</string>
-    <string name="share_photo">Podijeli sliku</string>
-    <string name="share_video">Podijeli videozapis</string>
+    <string name="share_photo_content_description">Podijeli sliku</string>
+    <string name="share_video_content_description">Podijeli videozapis</string>
+    <string name="share_content_description">Podijeli sadržaj</string>
 </resources>
