--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="location_access_not_granted_toast">Location access not granted. Please allow location access</string>
     <string name="observatory_details_not_found">Observatory details not found</string>
     <string name="observatory_visit_homepage_button">Visit homepage</string>
+    <string name="activate_location">Activate location</string>
 </resources>
