--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <!-- Snackbar text, that indicates the data is populated from the database -->
     <string name="snackbar_offline_mode">You are currently offline. Displaying local data</string>
 
-    <string name="snackbar_location_disabled">Location is disabled. Please turn location on</string>
+    <string name="snackbar_location_disabled">Location is disabled. Please turn location for the purpose of finding observatories near you.</string>
 
     <!-- Navigation drawer labels -->
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
@@ -68,5 +68,7 @@
     <string name="observatory_details_not_found">Observatory details not found</string>
     <string name="observatory_visit_homepage_button">Visit homepage</string>
     <string name="activate_location">Activate location</string>
-    <string name="no_observatories_found_location_disabled">Location is disabled. Please turn on location and refresh.</string>
+    <string name="no_observatories_found_location_disabled">Location is disabled.</string>
+    <string name="cancel">Cancel</string>
+    <string name="open_location_settings">Open location settings</string>
 </resources>
