--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -46,4 +46,5 @@
     <string name="cancel">Odustani</string>
     <string name="open_location_settings">Otvori postavke lokacije</string>
     <string name="grant_location_permission">Dopusti pristup lokaciji</string>
+    <string name="no_internet_connection">Nema internetske veze. Niste na mreži.</string>
 </resources>
