--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,17 @@
     <string name="menu_observatories">Observatories</string>
 
     <string name="menu_refresh">Refresh</string>
+    <string name="menu_settings">Settings</string>
+    <string name="settings_general">General</string>
 
+    <string name="settings_language_key">language</string>
+    <string name="settings_language">Language</string>
+    <string name="settings_language_default">@string/language_english</string>
+
+    <string name="language_english">English</string>
+    <string name="language_croatian">Croatian</string>
+    <string name="language_english_key">english</string>
+    <string name="language_croatian_key">croatian</string>
 
     <!-- AstroAppWidget strings -->
     <string name="widget_photo_of_the_day">Photo of the day</string>
