Add Croatian translation for the strings in the TranslationsEditor

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -4,4 +4,55 @@
     <string name="menu_photo">Slika dana</string>
     <string name="menu_asteroids">Asteroidi</string>
     <string name="menu_observatories">Zvjezdarnice</string>
+    <string name="activate_location">Uključi lokaciju</string>
+    <string name="approach_date_label">Datum dolaska:</string>
+    <string name="asteroid_hazardous_image">Indikacija opasnosti asteroida</string>
+    <string name="asteroid_image_content_description">Slika asteroida</string>
+    <string name="asteroid_is_hazardous_content_descriptions">Asteroid je opasan</string>
+    <string name="asteroid_not_hazardous_content_description">Asteroid nije opasan</string>
+    <string name="cancel">Odustani</string>
+    <string name="diameter_label">Promjer:</string>
+    <string name="dismiss_dialog">Zatvori</string>
+    <string name="grant_location_permission">Dopusti pristup lokaciji</string>
+    <string name="language_croatian">Hrvatski</string>
+    <string name="language_english">Engleski (English)</string>
+    <string name="location_access_not_granted_toast">Trebamo Vaše dopuštenje s ciljem korištenja Vaše lokacije za pronalaženje zvjezdarnica u Vašoj blizini. Molimo dopustite pristup lokaciji u postavkama Vašeg telefona.</string>
+    <string name="location_permission_declined">Odbijeno dopuštenje pristupa lokaciji</string>
+    <string name="location_permission_granted">Dopušten pristup lokaciji</string>
+    <string name="marker_of_the_observatory_content_description">Lokacija zvjezdarnice</string>
+    <string name="menu_asteroids_content_description">Navigirajte do asteroida</string>
+    <string name="menu_observatories_content_description">Navigirajte do zvjezdarnica</string>
+    <string name="menu_photo_content_description">Navigirajte to slike dana</string>
+    <string name="menu_refresh">Osvježi</string>
+    <string name="menu_settings">Postavke</string>
+    <string name="menu_settings_content_description">Navigirajte do postavki</string>
+    <string name="name_label">Ime asteroida:</string>
+    <string name="nav_header_nasa">Podaci zaprimljeni od NASA-e</string>
+    <string name="nav_header_subtitle">Otkrijte svemir</string>
+    <string name="no_asteroids_found">Nema pronađenih asteroida</string>
+    <string name="no_internet_connection">Nema pristupa Internetu. Niste na mreži</string>
+    <string name="no_observatories_found">Nema pronađenih zvjezdarnica</string>
+    <string name="no_observatories_found_location_disabled">Lokacija je onemogućena.</string>
+    <string name="no_photo_found">Nema pronađene slike.</string>
+    <string name="observatory_details_not_found">Detalji zvjezdarnice nisu pronađeni.</string>
+    <string name="observatory_list_item_button_content_description">Vidi detalje zvjezdarnice</string>
+    <string name="observatory_open">Sada otvoreno</string>
+    <string name="observatory_visit_homepage_button">Posjeti web stranicu</string>
+    <string name="open_location_settings">Otvori postavke lokacije</string>
+    <string name="photo_of_content_description">Slika</string>
+    <string name="photo_of_the_day_content_description">Slika dana</string>
+    <string name="play_video_button">Pokreni video</string>
+    <string name="read_more_about_content_description">Pročitaj više o</string>
+    <string name="read_more_button">Pročitaj više</string>
+    <string name="settings_general">Općenito</string>
+    <string name="settings_language">Jezik</string>
+    <string name="settings_language_key">jezik</string>
+    <string name="share_content_description">Podijeli sadržaj</string>
+    <string name="share_photo_content_description">Podijeli sliku</string>
+    <string name="share_video_content_description">Podijeli videozapis</string>
+    <string name="snackbar_location_disabled">Lokacija je onemogućena. Molimo uključite lokaciju s ciljem pronalaženja obližnjih zvjezdarnica</string>
+    <string name="snackbar_offline_mode">Trenutno niste na mreži. Prikazuju se lokalni podaci</string>
+    <string name="velocity_label">Brzina:</string>
+    <string name="widget_image_content_description">Slika dana</string>
+    <string name="widget_photo_of_the_day">Slika dana</string>
 </resources>
