--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,10 +42,11 @@
     <string name="menu_settings">Settings</string>
     <string name="settings_general">General</string>
 
+    <!-- SettingFragment strings -->
     <string name="settings_language_key" translatable="false">language</string>
     <string name="settings_language">Language</string>
     <string name="settings_language_default" translatable="false">@string/language_english_key</string>
-
+    <string name="settings_fragment_name" translatable="false">SettingsFragment</string>
     <string name="language_english">English</string>
     <string name="language_croatian">Croatian (hrvatski)</string>
     <string name="language_english_key" translatable="false">en</string>
