Add a photoVideoSourceView that indicates the source of the photo of the day content as provided by NASA

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -54,4 +54,5 @@
     <string name="velocity_label">Brzina:</string>
     <string name="widget_image_content_description">Slika dana</string>
     <string name="widget_photo_of_the_day">Slika dana</string>
+    <string name="photo_video_source">Izvor: NASA</string>
 </resources>
